--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,10 @@ __recovery/
 # Castalia statistics file (since XE7 Castalia is distributed with Delphi)
 *.stat
 
-# Boss dependency manager vendor folder https://github.com/HashLoad/boss
-modules/
-/digest.txt
+digest.txt
+pas-api-map.md
+agents.md
+conventions.md
+todo.md
+
+.aider*
