feat(cache): add multi-namespace cache and adjust timer test
- add MaxLogic.Cache and repository units from spec
- update PortableTimer mode switch test to average samples and allow scheduler jitter

--- a/tests/MaxLogic.Tests.dproj
+++ b/tests/MaxLogic.Tests.dproj
@@ -179,6 +179,13 @@
         <DCCReference Include="..\MaxLogic.StrUtils.pas"/>
         <DCCReference Include="unit\MaxLogic.PortableTimer.Tests.pas"/>
         <DCCReference Include="unit\MaxLogic.StrUtils.Tests.pas"/>
+        <DCCReference Include="..\MaxLogic.hash.FNV1a.pas"/>
+        <DCCReference Include="..\MaxLogic.hash.xxHash.pas"/>
+        <DCCReference Include="..\MaxLogic.hash.Murmur.pas"/>
+        <DCCReference Include="..\MaxLogic.Cache.pas"/>
+        <DCCReference Include="..\MaxLogic.Cache.RepositoryBase.pas"/>
+        <DCCReference Include="unit\MaxLogic.Cache.Tests.pas"/>
+        <DCCReference Include="unit\MaxLogic.Hash.Tests.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
             <DependentOn>..\MaxLogicDefault.optset</DependentOn>
