fix(process): restore Win32 build and add CPU load tests
Add a MSWINDOWS compatibility declaration for PROCESS_QUERY_LIMITED_INFORMATION when missing from Winapi headers and update Windows CPU time collection handle logic.

Add MaxLogic.Process unit tests, including a 10-second all-core CPU load scenario that verifies CPU usage increases over baseline.

--- a/tests/MaxLogic.Tests.dproj
+++ b/tests/MaxLogic.Tests.dproj
@@ -186,6 +186,7 @@
         <DCCReference Include="..\MaxLogic.Cache.RepositoryBase.pas"/>
         <DCCReference Include="unit\MaxLogic.Cache.Tests.pas"/>
         <DCCReference Include="unit\MaxLogic.Hash.Tests.pas"/>
+        <DCCReference Include="unit\MaxLogic.Process.Tests.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
             <DependentOn>..\MaxLogicDefault.optset</DependentOn>
